applications/openlookeng-website-test-version/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openlookeng-website
  name: openlookeng-website
