applications/openlookeng-website-test-version/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - openlookeng'
  name: openlookeng-website-ingress-main
  namespace: openlookeng-website
  labels: 
    app: openlookeng-website
spec:
  tls:
    - hosts:
        - openlookeng.test.osinfra.cn
      secretName: openlookeng-website-tls-main
  rules:
    - host: openlookeng.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: openlookeng-website-frontend-service
              servicePort: 80
            path: /
